<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".card.CardFragment">

        <ImageView
            android:id="@+id/card_fragment_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/company_image"
            android:src="@drawable/ic_blank_company_picture_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_fragment_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/company_name"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/card_fragment_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/card_fragment_image"
            app:layout_constraintTop_toBottomOf="@+id/card_fragment_image" />

        <TextView
            android:id="@+id/card_fragment_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/company_description"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/card_fragment_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/card_fragment_image"
            app:layout_constraintTop_toBottomOf="@+id/card_fragment_name" />

        <TextView
            android:id="@+id/card_fragment_web"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autoLink="all"
            android:text="@string/company_web"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/card_fragment_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/card_fragment_image"
            app:layout_constraintTop_toBottomOf="@+id/card_fragment_description" />

        <TextView
            android:id="@+id/card_fragment_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autoLink="all"
            android:text="@string/company_phone"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/card_fragment_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/card_fragment_image"
            app:layout_constraintTop_toBottomOf="@+id/card_fragment_web" />

        <Button
            android:id="@+id/card_fragment_coordinates"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autoLink="all"
            android:text="@string/company_coordinates"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/card_fragment_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/card_fragment_image"
            app:layout_constraintTop_toBottomOf="@+id/card_fragment_web" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>